--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.1 <3.0.0"
+  sdk: ">=2.19.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -32,16 +32,30 @@ dependencies:
 
   intl_phone_field: ^3.1.0
   pin_code_fields: ^7.4.0
+  intl: ^0.18.1
+  provider: ^6.0.5
   google_fonts: ^3.0.1
-  firebase_core_platform_interface: 4.5.1
-  firebase_messaging: ^13.0.4
-  firebase_core: ^1.17.1
-  firebase_auth: ^3.3.19
+  firebase_core_platform_interface: ^4.8.0
+  firebase_messaging: ^14.6.1
+  firebase_core: ^2.13.0
+  firebase_auth: ^4.6.1
   shared_preferences: ^2.0.18
+  bubble_tab_indicator: ^0.1.4
+  fl_chart: ^0.62.0
+  better_player: ^0.0.48
+  google_maps_flutter: ^2.2.1
+  map_launcher: ^2.4.0
+  flutter_phone_direct_caller: ^2.1.1
+  maps_launcher: ^2.0.1
+  url_launcher: ^6.1.6
+  path: ^1.8.2
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  sqflite: ^2.2.8+4
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_test:
@@ -65,10 +79,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+#   To add assets to your application, add an assets section, like this:
+  assets:
+     - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
